# cascade-guard

./: README.md  THEORY.md  pyproject.toml
cascade_guard/: __init__.py  cli.py  engine.py  flow_monitor.py  models.py  recovery.py  union_find.py
demo/: app.py
docs/: EDGE_CASES.md  PROOFS.md  Your-Multi-Agent-System-Will-Eat-Itself-In-Constant-Time.md
tests/: test_engine.py  test_flow_monitor.py  test_union_find.py
